welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
  for (compt <- 0 to 5) {
             ^